fix meta row spacing

--- a/src/routes/Board/styles.less
+++ b/src/routes/Board/styles.less
@@ -28,7 +28,7 @@
             overflow-y: auto;
 
             .board-row {
-                padding: 2rem;
+                margin: 4rem 2rem;
             }
         }
     }
