--- a/src/routes/Search/styles.less
+++ b/src/routes/Search/styles.less
@@ -22,7 +22,7 @@
         overflow-y: auto;
 
         .search-row {
-            padding: 2rem;
+            margin: 4rem 2rem;
         }
 
         .search-hints-container {
